--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "dev": "nodemon --watch src --ext js --exec \"node src/server.js\"",
     "start": "node src/server.js",
+    "seed": "node prisma/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -29,6 +31,7 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "nodemon": "^3.1.10",
     "prisma": "^6.18.0"
   }
