--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,10 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "gray-matter": "^4.0.3",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-server-dom-webpack": "^19.2.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
