--- a/database/.env.example
+++ b/database/.env.example
@@ -1,13 +1,11 @@
-# Database configuration
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=your_db_user
-DB_PASS=your_db_password
-DB_NAME=vancine
+# Database (PostgreSQL + Prisma)
+DATABASE_URL="postgresql://your_user:your_password@localhost:5432/vancine"
+
+# Server
 PORT=3000
 
-# API Keys - Get these from their respective services:
-# TMDB: https://www.themoviedb.org/settings/api
-# OMDB: https://www.omdbapi.com/apikey.aspx
+# External API Keys
+# - TMDB: https://www.themoviedb.org/settings/api
+# - OMDB: https://www.omdbapi.com/apikey.aspx
 TMDB_API_KEY=your_tmdb_api_key
 OMDB_API_KEY=your_omdb_api_key
