--- a/database/.env.example
+++ b/database/.env.example
@@ -5,7 +5,6 @@ DATABASE_URL="postgresql://your_user:your_password@localhost:5432/vancine"
 PORT=3000
 
 # External API Keys
-# - TMDB: https://www.themoviedb.org/settings/api
-# - OMDB: https://www.omdbapi.com/apikey.aspx
 TMDB_API_KEY=your_tmdb_api_key
 OMDB_API_KEY=your_omdb_api_key
+OPENAI_API_KEY=your_openai_api_key
