--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,9 @@
     "dev": "nodemon --watch src --ext js --exec \"node src/server.js\"",
     "start": "node src/server.js",
     "seed": "node prisma/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "postinstall": "prisma generate"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -32,7 +31,9 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@types/node": "^24.10.1",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.18.0"
   }
